# dfg-bpmn-decomposition

./: .gitignore  Makefile  README.md  pyproject.toml
data/: repairExample.csv  sepsis.csv  subprocesses_labels.json
notebooks/: milestone1.ipynb  milestone2.ipynb  overview.ipynb
process_viewer/: __init__.py  bpmn_abstractor.py  bpmn_adapter.py  subprocesses_labeler.py  viewer.py  viewer_bpmn.py
